STYLE: fixed images responsiveness on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,6 +92,7 @@ body {
 }
 
 .workout-wrapper {
+    max-width: 650px;
     width: 80%;
     position: absolute;
     left: 50%;
@@ -151,16 +152,24 @@ body {
     text-align: center;
     align-content: center;
 }
+.exercise--card--description{
+    text-align: justify;
+}
 
 .exercise--card .s12 {
-    padding-top: 10px;
+    padding-top: 15px;
     color: black;
+    padding-left: 20px;
 }
 
 .exercise--img {
-    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    /*object-fit: contain;*/
     margin-top: 15px;
+    border-radius: 45%;
 }
+
 
 #add_more {
     cursor: pointer;
@@ -203,7 +212,6 @@ body {
 }
 
 .workout-exercise-single-image-wrapper {
-
     display: flex;
     justify-content: center;
     width: 150px;
@@ -255,6 +263,7 @@ body {
     /*background-repeat: no-repeat;*/
     /*background-position: 0 0;*/
     /*transition: 2s cubic-bezier(0.645, 0.045, 0.355, 1);*/
+    background-color: #e7e7e7;
 }
 .workout-card--inner{
     padding-left: 10px;
@@ -293,5 +302,21 @@ body {
 @media only screen and (max-width: 700px) {
     .workout-exercise-single-wrapper {
         width: 90vw;
+    }
+}
+
+
+@media only screen and (max-width: 400px) {
+    .exercise--card--description{
+        font-size: 0.7rem;
+    }
+    .exercise-form-button{
+        width: 90% !important;
+        font-size: 1rem;
+    }
+
+    .exercise--form {
+        height: auto;
+        margin: 0;
     }
 }
